# LibEBC

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/ebc/: BitcodeArchive.h  BitcodeContainer.h  EmbeddedBitcode.h
test/: CMakeLists.txt
test/src/: TestBitcodeArchive.cpp
